# data-eng-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
data/: file.csv
src/: __main__.py
