[tool.poetry]
name = "data-eng-demo"
version = "0.1.0"
description = ""
authors = ["Mitch Maegaard <maegaard.mitchell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.7.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
