[tool.poetry]
name = "data-eng-demo"
version = "0.1.0"
description = "Data Engineering Tool Demo"
authors = ["Mitch Maegaard <maegaard.mitchell@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dbt-core = "^1.7.13"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
